--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -10,6 +10,7 @@
 @import "header/header";
 @import "content/main-banner";
 @import "content/advantages-list";
+@import "content/advantages-h-list";
 @import "content/content";
 @import "footer/footer";
 
