--- a/app/sass/global/variables.scss
+++ b/app/sass/global/variables.scss
@@ -32,3 +32,16 @@ $containerWidth: 1360px;
 $containerWidthSmall: 1020px;
 $containerWidthLarge: 1440px;
 
+
+
+$theme-1: #9bc045;
+$theme-2:  #3180CA;
+$theme-3:  #C93E7F;
+$theme-4: #D0724E;
+
+$theme-colors: (
+	theme-green: #9bc045,
+	theme-blue: #3180CA,
+	theme-pink: #C93E7F,
+	theme-brown: #D0724E
+);
