--- a/app/templates/index.twig
+++ b/app/templates/index.twig
@@ -1,5 +1,6 @@
 {% extends "layouts/default.twig" %}
 {% set title="Главная" %}
+{% set theme="theme-green" %}
 {% block content %}
 	<div class="main-banner">
 		<div class="uk-container uk-container--large">
@@ -145,10 +146,18 @@
 					</li>
 				</ul>
 				<div class="center-box">
+					<svg width="100%" height="100%" class="yellow-ellipse-1">
+					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-1"></use>
+					</svg>
+					<svg width="100%" height="100%" class="yellow-ellipse-2">
+					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#yellow-ellipse-2"></use>
+					</svg>
 					<img src="img/media/advantage-img/egg-green.png" alt="">
 				</div>
 			</div>
 		</div>
 	</section>
+
+	{% include './includes/components/advantages-h-section.twig' with {'theme': 'green'} %}
 
 {% endblock %}
