--- a/app/templates/layouts/default.twig
+++ b/app/templates/layouts/default.twig
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 {% include "../includes/head.twig" %}
-<body>
+<body class="{{theme}}">
 {% include "../includes/header/header.twig" %}
 	
 {% block content %}{% endblock %}
