--- a/app/templates/index.twig
+++ b/app/templates/index.twig
@@ -160,4 +160,6 @@
 
 	{% include './includes/components/advantages-h-section.twig' with {'theme': 'green'} %}
 
+	{% include './includes/components/typebox-section.twig' with {'theme': 'green'} %}
+	{% include './includes/components/brands-slider.twig' %}
 {% endblock %}
