--- a/app/sass/content/advantages-h-list.scss
+++ b/app/sass/content/advantages-h-list.scss
@@ -36,6 +36,9 @@
 				top: 0;
 				left: 0;
 				z-index: 14;
+				display: block;
+				width: 100%;
+				height: 100%;
 				svg {
 					width: 100%;
 					height: 100%;
