--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -11,6 +11,7 @@
 @import "content/main-banner";
 @import "content/advantages-list";
 @import "content/advantages-h-list";
+@import "content/typebox-section";
 @import "content/content";
 @import "footer/footer";
 
