--- a/app/sass/global/default.scss
+++ b/app/sass/global/default.scss
@@ -36,7 +36,8 @@ a {
   text-decoration: none;
   transition: all .3s linear;
   &:hover {
-    text-decoration: underline;
+  	color: $btColor;
+    text-decoration: none;
   }
 }
 
@@ -50,6 +51,9 @@ svg {
   box-sizing: border-box;
   &--small {
   	max-width: $containerWidthSmall;
+  }
+  &--medium {
+  	max-width: $containerWidthMedium;
   }
   &--large {
   	max-width: $containerWidthLarge
@@ -77,4 +81,9 @@ svg {
 			padding-left: 30px;
 		};
 	}
+}
+
+
+.padding-left-25 {
+	padding-left: 25%;
 }
