--- a/app/sass/global/variables.scss
+++ b/app/sass/global/variables.scss
@@ -22,7 +22,7 @@ $fontWeight: 400;
 $tColor: #5b6356;
 $btColor: #333e2c;
 $bgColor: #faf4ef;
-
+$bgColorUI: #ECE6E1;
 $white: #ffffff;
 $green: #549537;
 //$yellow: linear-gradient(180deg, #ffa722 0%, #ffb422 100%);
@@ -30,6 +30,7 @@ $yellow: #ffb422;
 
 $containerWidth: 1360px;
 $containerWidthSmall: 1020px;
+$containerWidthMedium: 1205px;
 $containerWidthLarge: 1440px;
 
 
