--- a/app/templates/index.twig
+++ b/app/templates/index.twig
@@ -162,4 +162,5 @@
 
 	{% include './includes/components/typebox-section.twig' with {'theme': 'green'} %}
 	{% include './includes/components/brands-slider.twig' %}
+	{% include './includes/components/time-section.twig' %}
 {% endblock %}
