--- a/app/sass/footer/footer.scss
+++ b/app/sass/footer/footer.scss
@@ -1,2 +1,66 @@
 /*______ FOOTER ______*/
+
+.footer {
+	&__top {
+		margin-bottom: 30px;
+		padding-bottom: 30px;
+		border-bottom: 1px solid #ece6e1;
+		@media (min-width: $desk-w) {
+			margin-bottom: 60px;
+			padding-bottom: 80px;
+		};
+	}
+	&__title {
+		margin-bottom: 25px;
+		font-size: 16px;
+		line-height: 21px;
+		font-weight: 700;
+		letter-spacing: 0.8px;
+		text-transform: uppercase;
+	}
+	&__list {
+		@include list-reset;
+		li {
+			margin-bottom: 14px;
+			display: block;
+			a {
+				color: $tColor;
+			}
+		}
+	}
+}
+
+.contacts {
+	&__tel {
+		margin-bottom: 14px;
+		display: inline-block;
+		font-size: 24px;
+		color: $btColor;
+		font-family: $secondFont;
+	}
+}
+
+.subtitle {
+	margin-bottom: 10px;
+	font-size: 16px;
+	line-height: 22px;
+	color: #5b6356;
+}
+
+.green-link {
+	color: $green;
+}
+
+.copyright {
+	margin-bottom: 10px;
+}
+
+.politics {
+	color: $tColor;
+}
+
+.dev-ae {
+	color: $tColor;
+}
+
 /*______ END FOOTER ______*/
