--- a/app/sass/global/components.scss
+++ b/app/sass/global/components.scss
@@ -88,6 +88,24 @@
 	}
 }
 
+
+.circle-timer {
+	position: relative;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	&__ounter {
+
+	}
+/* 	&__inner {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	border-radius: 50%;
+	border: 2px solid $yellow;
+} */
+}
+
 /*______ END COMPONENTS ______*/
 
 
