--- a/app/sass/sliders/sliders.scss
+++ b/app/sass/sliders/sliders.scss
@@ -1,2 +1,78 @@
 /*______ SLIDERS ______*/
+
+.brands-slider {
+	margin-bottom: 130px;
+	.uk-container {
+		position: relative;
+	}
+	.slider {
+		&__arrows {
+			max-width: 1300px;
+			position: absolute;
+			top: 50%;
+			transform: translateY(-50%);
+			width: 100%;
+			z-index: 650;
+		}
+		.slide {
+			a {
+				display: flex;
+				width: 100%;
+				height: 100px;
+				justify-content: center;
+				align-items: center;
+			}
+		}
+		.slick-dots {
+			li {
+				width: auto;
+				height: auto;
+				button {
+					padding: 0;
+					width: 10px;
+					height: 10px;
+					transform: scale(.5);
+					border-radius: 50%;
+					background-color: $bgColorUI;
+					transition: transform .3s, background-color .3s, box-shadow .2s ease-in;
+					&:before {
+						display: none;
+					}
+				}
+				&.slick-active {
+					button {
+						background-color: $yellow;
+						transform: scale(1);
+						box-shadow: 0px 4px 4px rgba(255, 167, 34, 0.25);
+					}
+				}
+			}
+		}
+	}
+	.slide-prev,
+	.slide-next {
+		position: absolute;
+		top: 50%;
+		display: flex;
+		transform: translateY(-50%);
+		cursor: pointer;
+	}
+
+	.slide-prev {
+		left: 0;
+		@media (min-width: $desk-w) {
+			left: -120px;	
+		};
+	}
+
+	.slide-next {
+		left: auto;
+		right: 0;
+		@media (min-width: $desk-w) {
+			right: -120px;	
+		};
+		
+	}
+}
+
 /*______ END SLIDERS ______*/
