--- a/app/templates/includes/components/brands-slider.twig
+++ b/app/templates/includes/components/brands-slider.twig
@@ -2,15 +2,23 @@
 	<div class="brands-slider preload">
 		<div class="uk-container">
 			<div class="slider">
-				<div class="slide"><a href=""><img data-lazy="img/media/box-type-2.png" alt=""></a></div>
-				<div class="slide"><a href=""><img data-lazy="img/media/box-type-3.png" alt=""></a></div>
-				<div class="slide"><a href=""><img data-lazy="img/media/box-type-4.png" alt=""></a></div>
-				<div class="slide"><a href=""><img data-lazy="img/media/box-type-5.png" alt=""></a></div>
-				<div class="slide"><a href=""><img data-lazy="img/media/box-type-6.png" alt=""></a></div>
+				<div class="slide"><a href=""><img data-lazy="img/media/sliders/slider-brand-img-1.svg" alt=""></a></div>
+				<div class="slide"><a href=""><img data-lazy="img/media/sliders/slider-brand-img-2.svg" alt=""></a></div>
+				<div class="slide"><a href=""><img data-lazy="img/media/sliders/slider-brand-img-3.svg" alt=""></a></div>
+				<div class="slide"><a href=""><img data-lazy="img/media/sliders/slider-brand-img-4.svg" alt=""></a></div>
+				<div class="slide"><a href=""><img data-lazy="img/media/sliders/slider-brand-img-3.svg" alt=""></a></div>
 			</div>
 			<div class="slider__arrows">
-				<div class="slide-prev"><i class="icon-arrow-left"></i></div>
-				<div class="slide-next"><i class="icon-arrow-right"></i></div>
+				<div class="slide-prev">
+					<svg width="52px" height="27px" class="slider-arrow">
+					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#arrow-left"></use>
+					</svg>
+				</div>
+				<div class="slide-next">
+					<svg width="52px" height="27px" class="slider-arrow">
+					  <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="img/icon-svg/sprite/sprite-svg.svg#arrow-right"></use>
+					</svg>
+				</div>
 			</div>
 		</div>
 	</div>
