--- a/app/templates/includes/footer.twig
+++ b/app/templates/includes/footer.twig
@@ -1,8 +1,89 @@
 {% block content %}
 <!-- begin footer -->
 <footer class="footer">
-	<div class="uk-container uk-container--small">
-		FOOTER
+	<div class="uk-container uk-container--medium">
+		<div class="footer__top">
+			<div class="uk-grid">
+				<div class="uk-width-2-3">
+					<div class="uk-grid">
+						<div class="uk-width-1-3">
+							<div class="footer__title" data-tole="toggle-list">Наши марки</div>
+							<ul class="footer__list">
+								<li><a href="#">Лето</a></li>
+								<li><a href="#">Деревенское угодье</a></li>
+								<li><a href="#">Junio</a></li>
+								<li><a href="#">Сельская новь</a></li>
+							</ul>
+						</div>
+						<div class="uk-width-1-3">
+							<div class="footer__title" data-tole="toggle-list">О компании</div>
+							<ul class="footer__list">
+								<li>
+									<a href="#">О компании</a>
+								</li>
+								<li>
+									<a href="#">Партнёрам</a>
+								</li>
+								<li>
+									<a href="#">Поставщикам</a>
+								</li>
+								<li>
+									<a href="#">Вакансии</a>
+								</li>
+								<li>
+									<a href="#">Новости</a>
+								</li>
+								<li>
+									<a href="#">Контакты</a>
+								</li>
+							</ul>
+						</div>
+						<div class="uk-width-1-3">
+							<div class="footer__title" data-tole="toggle-list">Потребителям</div>
+							<ul class="footer__list">
+								<li>
+									<a href="#">Факты о яйце</a>
+								</li>
+								<li>
+									<a href="#">Рецепты</a>
+								</li>
+								<li>
+									<a href="#">Сообщить о проблеме</a>
+								</li>
+								<li>
+									<a href="#">Задать вопрос</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="uk-width-1-3">
+					<div class="padding-left-25">
+						<div class="footer__title">Группа компаний «Лето»</div>
+						<div class="contacts">
+							<a href="tel:+74957815404" class="contacts__tel">+7 495 781-54-04</a>
+							<div class="subtitle">Напишите нам:</div>
+							<a href="mailto:info@leto-group.ru" class="green-link">info@leto-group.ru</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="footer__bottom">
+			<div class="uk-grid">
+				<div class="uk-width-2-3">
+					<div class="copyright">Группа компаний «Лето» 2020</div>
+					<a href="" class="politics">Политика в отношении персональных данных</a>
+				</div>
+				<div class="uk-width-1-3">
+					<div class="padding-left-25">
+						<a href="https://aevrika.ru/" target="_blank" class="dev-ae">
+							Разработка и продвижение —ЭВРИКА
+						</a>
+					</div>
+				</div>
+			</div>
+		</div>
 	</div>
 </footer><!-- end footer -->
 {% endblock %}
