--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -12,6 +12,7 @@
 @import "content/advantages-list";
 @import "content/advantages-h-list";
 @import "content/typebox-section";
+@import "content/eggs-section";
 @import "content/content";
 @import "footer/footer";
 
