--- a/app/templates/includes/components/eggs-slider.twig
+++ b/app/templates/includes/components/eggs-slider.twig
@@ -1,33 +1,159 @@
 
-<div class="egg-slider">
-	<div class="slider">
-		<div class="slide">
-			<div class="uk-grid uk-child-width-1-3@m uk-child-width-1-2" uk-grid>
-				<div class="slide-section">
-					<div class="slide-section__img"></div>
-					<div class="slide-section__timer">
-						<div class="circle-timer">
-							<div class="circle-timer__outer"></div>
-							<div class="circle-timer__inner">
-								<svg width="100%" height="100%" xmlns="http://www.w3.org/2000/svg">
-									<circle cx="25" cy="25" r="25" width="1px" fill="#ffffff" stroke="#ffb422" stroke-width="2px"></circle>
-								</svg>
+<div class="eggs-section" uk-scrollspy="target: .egg-section; cls: slide-right svg-animate; delay: 300">
 
-							</div>
-							<div class="circle-timer__value">2</div>
+	<div class="uk-grid uk-child-width-1-3@m uk-child-width-1-2" uk-grid>
+
+		
+		<div class="egg-section">
+			<div class="egg-section__inner">
+				<div class="egg-section__img">
+					<img src="img/media/egg-img-1.svg" alt="">
+				</div>
+				<div class="egg-section__timer">
+					<div class="circle-timer" data-time="2">
+						<div class="circle-timer__outer">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
+								<circle class="circle-2" cx="27" cy="27" r="27"></circle>
+							</svg>
 						</div>
-						<div class="text">Минуты</div>
+						<div class="circle-timer__inner">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+								<circle class="circle-1" cx="25" cy="25" r="25"></circle>
+							</svg>
+				
+						</div>
+						<div class="circle-timer__value">2</div>
 					</div>
+					<div class="egg-section__text">Минуты</div>
 				</div>
 			</div>
 		</div>
-	</div>
-</div>
-<!-- 157 = 60
-x = 2
 
-157*2/60 -->
-<!-- <svg width="50px" height="50px" viewbox="0 0 50px 50px" xmlns="http://www.w3.org/2000/svg">
-	<circle cx="23" cy="23" r="23" width="1px" fill="#ffffff" stroke="#ffb422" stroke-width="2px"></circle>
-</svg>
- -->
+		<div class="egg-section">
+			<div class="egg-section__inner">
+				<div class="egg-section__img">
+					<img src="img/media/egg-img-2.svg" alt="">
+				</div>
+				<div class="egg-section__timer">
+					<div class="circle-timer" data-time="4">
+						<div class="circle-timer__outer">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
+								<circle class="circle-2" cx="27" cy="27" r="27"></circle>
+							</svg>
+						</div>
+						<div class="circle-timer__inner">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+								<circle class="circle-1" cx="25" cy="25" r="25"></circle>
+							</svg>
+				
+						</div>
+						<div class="circle-timer__value">4</div>
+					</div>
+					<div class="egg-section__text">Минуты</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="egg-section">
+			<div class="egg-section__inner">
+				<div class="egg-section__img">
+					<img src="img/media/egg-img-3.svg" alt="">
+				</div>
+				<div class="egg-section__timer">
+					<div class="circle-timer" data-time="6">
+						<div class="circle-timer__outer">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
+								<circle class="circle-2" cx="27" cy="27" r="27"></circle>
+							</svg>
+						</div>
+						<div class="circle-timer__inner">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+								<circle class="circle-1" cx="25" cy="25" r="25"></circle>
+							</svg>
+				
+						</div>
+						<div class="circle-timer__value">6</div>
+					</div>
+					<div class="egg-section__text">Минут</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="egg-section">
+			<div class="egg-section__inner">
+				<div class="egg-section__img">
+					<img src="img/media/egg-img-4.svg" alt="">
+				</div>
+				<div class="egg-section__timer">
+					<div class="circle-timer" data-time="8">
+						<div class="circle-timer__outer">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
+								<circle class="circle-2" cx="27" cy="27" r="27"></circle>
+							</svg>
+						</div>
+						<div class="circle-timer__inner">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+								<circle class="circle-1" cx="25" cy="25" r="25"></circle>
+							</svg>
+				
+						</div>
+						<div class="circle-timer__value">8</div>
+					</div>
+					<div class="egg-section__text">Минут</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="egg-section">
+			<div class="egg-section__inner">
+				<div class="egg-section__img">
+					<img src="img/media/egg-img-5.svg" alt="">
+				</div>
+				<div class="egg-section__timer">
+					<div class="circle-timer" data-time="10">
+						<div class="circle-timer__outer">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
+								<circle class="circle-2" cx="27" cy="27" r="27"></circle>
+							</svg>
+						</div>
+						<div class="circle-timer__inner">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+								<circle class="circle-1" cx="25" cy="25" r="25"></circle>
+							</svg>
+				
+						</div>
+						<div class="circle-timer__value">10</div>
+					</div>
+					<div class="egg-section__text">Минут</div>
+				</div>
+			</div>
+		</div>
+
+		<div class="egg-section">
+			<div class="egg-section__inner">
+				<div class="egg-section__img">
+					<img src="img/media/egg-img-6.svg" alt="">
+				</div>
+				<div class="egg-section__timer">
+					<div class="circle-timer" data-time="15">
+						<div class="circle-timer__outer">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 54 54">
+								<circle class="circle-2" cx="27" cy="27" r="27"></circle>
+							</svg>
+						</div>
+						<div class="circle-timer__inner">
+							<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 50 50">
+								<circle class="circle-1" cx="25" cy="25" r="25"></circle>
+							</svg>
+				
+						</div>
+						<div class="circle-timer__value">15</div>
+					</div>
+					<div class="egg-section__text">Минут</div>
+				</div>
+			</div>
+		</div>
+
+	</div>
+
+</div>
