--- a/app/sass/footer/footer.scss
+++ b/app/sass/footer/footer.scss
@@ -6,9 +6,12 @@
 		padding-bottom: 30px;
 		border-bottom: 1px solid #ece6e1;
 		@media (min-width: $desk-w) {
-			margin-bottom: 60px;
+			margin-bottom: 70px;
 			padding-bottom: 80px;
 		};
+	}
+	&__bottom {
+		padding-bottom: 70px;
 	}
 	&__title {
 		margin-bottom: 25px;
