--- a/app/templates/includes/components/time-section.twig
+++ b/app/templates/includes/components/time-section.twig
@@ -1,8 +1,13 @@
 
-<section class="time-section" style="display: none;">
+<section class="time-section">
 	<div class="uk-container uk-container--small">
-		<h2 class="uk-text-center">Сколько времени варить яйца?</h2>
-		<a href="/timer.html" class="btn btn--icon uk-margin-auto icon-clock"><span>попробуйте наш таймер</span></a>
+		<h2 class="uk-text-center" uk-scrollspy="cls:slide-up">Сколько времени варить яйца?</h2>
+		<a href="/timer.html" class="btn btn--icon uk-margin-auto icon-clock" uk-scrollspy="cls:slide-up; delay: 100"><span>попробуйте наш таймер</span></a>
 		{% include './eggs-slider.twig' %}
+		<p>
+			Заранее выложите яйца из холодильника, чтобы они стали комнатной температуры. Я кладу яйца для варки в кастрюльку и заливаю теплой водой из-под крана. Когда кастрюлька наполнится, постепенно поворачиваю кран и увеличиваю температуру воды с яйцами до максимально горячей. Это сэкономит около минуты при варке яиц.
+		</p>
+		<a href="" class="green-link">Подробнее</a>
+		<a href="" class="btn btn--yellow uk-margin-auto" uk-scrollspy="cls:slide-up"><span>Посмотреть все рецепты</span></a>
 	</div>
 </section>
